# CusFFmpegPlayer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/xyz/study/cusffmpegplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_player.cpp
app/src/main/java/com/xyz/study/cusffmpegplayer/: FFPlayer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/xyz/study/cusffmpegplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
